2012-04-11  Sancho Lerena <slerena@artica.es>

	* godmode/usuarios/configurar_usuarios.php: Fixed problem with blank
	spaces in email.

2012-04-04  Dario Rodriguez <dario.rodriguez@artica.es>

	* integria_cron.php,
	functions_pop3.php: Fixed a problem with cron email check function.

2012-04-02  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/integria_cron.php: Fixed a mistake in code which exits 
	check mail function before to check any mailbox.

2012-04-02  Dario Rodriguez <dario.rodriguez@artica.es>

	* index.php: Fixed some missing css files which caused that tabs and
	datepicker were showed wrong.

2012-03-29  Sancho Lerena <slerena@artica.es>

	* include/js/calendar.js: Fixed hack on IE which breaks
	mozilla render :(

2012-03-28 Sancho Lerena <slerena@artica.es>

	* general/error_invalidconfig.php
	general/error_databaseconnect.php: Fixed some messages.

	* include/styles/integria.css
	images/artica_logo_negro.png
	images/loginform.png
        images/loginbutton.png
        images/loginbacklogo.png
        images/loginlogo.png
        images/loginback.png
        general/password_recovery.php
        general/login_page.php: New login form layout. Need fix in IE and
	popup/modal message on bad login.

2012-03-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/projects/task_planning.php: Fixed some style problem with
	create task interface.

2012-03-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/projects/task_planning.php: Fixed a bug that creates new
	task owners without role assigned. Fixed a wrong label.

2012-03-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/projects/task_planning.php: Changed completed color from red
	to blue.

2012-03-27 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/projects/task_planning.php: Fixed a visual style centering
	the statistics summary charts.

2012-03-27 Dario Rodriguez <dario.rodriguez@artica.es>
