@@ -1,3 +1,9 @@
+2012-04-11  Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* operation/side_menu.php
+	operation/user_report/report_monthly.php: Fixed an ACL problem for 
+	external users and People view.
+
 2012-04-11  Sancho Lerena <slerena@artica.es>
 
 	* godmode/usuarios/configurar_usuarios.php: Fixed problem with blank
